--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "package": "ng build NgxGoogleMapHelper"
+    "package": "ng build NgxGoogleMapHelper",
+    "travis": "ng build NgxGoogleMapHelper && ng build --prod --base-href https://imanshu15.github.io/ngx-google-map-helper/"
   },
   "private": true,
   "dependencies": {
