--- a/projects/ngx-google-map-helper/package.json
+++ b/projects/ngx-google-map-helper/package.json
@@ -16,9 +16,12 @@
   ],
   "keywords": [
     "angular",
+    "angular7",
     "typescript",
     "ngx",
-    "google map",
+    "google",
+    "google-map",
+    "google-map-api",
     "google map drawing",
     "google map API",
     "drawing controls"
