--- a/projects/ngx-google-map-helper/package.json
+++ b/projects/ngx-google-map-helper/package.json
@@ -29,6 +29,7 @@
     "google-map-api",
     "google map drawing",
     "google map API",
+    "googlemaps",
     "drawing controls"
   ],
   "repository": {
