--- a/projects/ngx-google-map-helper/package.json
+++ b/projects/ngx-google-map-helper/package.json
@@ -40,7 +40,10 @@
   "bugs": "https://github.com/imanshu15/ngx-google-map-helper/issues",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "^12.2.0",
+    "@angular/core": "^12.2.0"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   }
 }
