--- a/projects/ngx-google-map-helper/tsconfig.lib.json
+++ b/projects/ngx-google-map-helper/tsconfig.lib.json
@@ -1,22 +1,24 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
-    "module": "es2015",
-    "moduleResolution": "node",
     "declaration": true,
-    "sourceMap": true,
+    "declarationMap": true,
     "inlineSources": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "types": [],
     "lib": [
       "dom",
       "es2018"
     ]
   },
+  "exclude": [
+    "src/test.ts",
+    "**/*.spec.ts"
+  ],
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
@@ -25,8 +27,4 @@
     "strictInjectionParameters": true,
     "enableResourceInlining": true
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
-  ]
 }
